--- a/emotioner.rmd
+++ b/emotioner.rmd
@@ -4,6 +4,8 @@ Känslor kan inbegripa både kroppsliga och mentala tillstånd som inbegriper ol
 
 För definitioner av "feeling", "emotion", "affect", etc se [@PaceSchott2019].
 
+Allostasis, Action, and Affect in Depression: Insights from the Theory of Constructed Emotion[@Shaffer2022]
+
 ## Kategorisering och beskrivning av känslor
 
 Forskning där man försökt särskilja olika "grundläggande känslor" har föreslagit tex:
